<resources>
    <string name="app_name">Skynet</string>
    <string name="_100">100%</string>
    <string name="progress_title">Progress Title</string>
    <string name="progress_message">Progress message</string>
    <string name="profile">Profile</string>
    <string name="lifetime">Lifetime</string>
    <string name="username">Username</string>
    <string name="price">Price</string>
    <string name="price_rp">Price : Rp</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="print">Print</string>
</resources>