<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="25dp"
    android:layout_marginHorizontal="5dp"
    app:cardBackgroundColor="@android:color/black"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_voucher_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:paddingHorizontal="10dp"
        android:visibility="visible">
        <TextView
            android:id="@+id/item_voucher_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textStyle="italic|bold"
            android:text="@string/profile"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/item_voucher_uptime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textStyle="italic|bold"
            android:textColor="@android:color/white"
            android:text="@string/lifetime"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/item_voucher_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/username"
            app:layout_constraintTop_toBottomOf="@id/item_voucher_profile"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/item_voucher_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="italic|bold"
            android:textColor="@android:color/white"
            android:text="@string/price"
            app:layout_constraintTop_toBottomOf="@id/item_voucher_profile"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:id="@+id/item_editor_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:paddingHorizontal="10dp"
        android:background="@color/white"
        android:visibility="visible">
        <TextView
            android:id="@+id/price_editor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@id/price_editor_price"
            android:layout_alignTop="@id/price_editor_price"
            android:labelFor="@id/price_editor_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:paddingHorizontal="5dp"
            android:gravity="center_vertical"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:text="@string/price_rp"/>
        <EditText
            android:id="@+id/price_editor_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/price_editor_label"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            android:inputType="numberDecimal"
            android:autofillHints="0.0"/>
        <Button
            android:id="@+id/item_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/price_editor_price"
            android:layout_alignStart="@id/price_editor_label"
            android:text="@string/delete"/>
        <Button
            android:id="@+id/item_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_alignTop="@id/item_delete_button"
            android:layout_toEndOf="@id/item_delete_button"
            android:text="@string/save"/>
        <Button
            android:id="@+id/item_print_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/item_delete_button"
            android:layout_toEndOf="@id/item_save_button"
            android:text="@string/print"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>