<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp"
    android:padding="20dp"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardPreventCornerOverlap="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:id="@+id/async_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="25dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
            android:gravity="center"
            android:textStyle="italic"
            android:text="@string/progress_title"
            android:textAlignment="center"/>
        <ProgressBar
            android:id="@+id/async_dialog_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/async_dialog_percent"
            android:layout_alignBottom="@id/async_dialog_percent"
            android:layout_alignTop="@id/async_dialog_percent"
            android:indeterminate="false"
            android:progress="1"
            android:max="100"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
        <TextView
            android:id="@+id/async_dialog_percent"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/async_dialog_title"
            android:layout_marginBottom="15dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:gravity="center"
            android:textStyle="italic"
            android:text="@string/_100"
            android:textAlignment="center"/>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@id/async_dialog_percent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:padding="5dp">
            <TextView
                android:id="@+id/async_dialog_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textAlignment="center"
                android:textStyle="italic"
                android:text="@string/progress_message"/>
        </ScrollView>
    </RelativeLayout>
</androidx.cardview.widget.CardView>